--- a/app/Employee/style.css
+++ b/app/Employee/style.css
@@ -62,13 +62,16 @@ header .head-right {
 .employee .head-right .button-download-report {
     background-color: #0A68FF;
     border-radius: 16px;
-    padding: 12px 16px 12px 16px;
+    padding: 5px 5px 5px 5px;
     font-size: 12px;
     font-weight: 600;
     color: #F3F5F9;
+    width: 150px;
+    height: 40px;
+    
 }
 .employee .head-right .button-download-report svg {
-    margin-left: 5px;
+    margin-left: 3%;
 }
 /*-------------------------end of header----------------------------*/
 /*-------------------------tabs----------------------------*/
@@ -128,7 +131,7 @@ header .head-right {
     header 
     {
         width: 100%;
-        height: 5%;
+        height: 10%;
     }
     header .head-left span
     {
@@ -138,31 +141,31 @@ header .head-right {
     {
         display: none;
     }
-    /*-------------------------tabs----------------------------*/
-    .payment
-    {
-        background-color: #FFFFFF;
+    header .head-right {
+        width: 35% !important;
+        margin-right: 1%;
+        padding: 0px;
+        padding-top: 3%;
     }
-    .payment-main
-    {
+    .employee .head-right .button-download-report {
+        padding: 5px 5px 5px 1px;
+        font-size: 11px;
+        width: 132px;
+        height: 40px;
+    }
+    /*-------------------------tabs----------------------------*/
+    .employee-main {
         border: none;
     }
-    .payment-main .tabs .tablist
-    {
-        overflow-x: scroll;
-        height: 13%;
+    .employee-main .tabs .tablist {
         padding: 0%;
-        display: flex;
+        justify-content: space-between;
     }
-    .payment-main .tabs .tablist::-webkit-scrollbar
-    {
-        display: none;
+    .employee-main .tabs .tablist .tabstrigger {
+        width: 30%;
+        font-size: 15px;
     }
-    .payment-main .tabs .tablist .tabstrigger
-    {
-        height: 100%;
-        width: 100%;
-    }
+    
     /*--------end of tabs------------*/
     
     
