--- a/components/Performance/style.css
+++ b/components/Performance/style.css
@@ -57,8 +57,6 @@
     width: 80%;
     height: 100%;
     padding-left: 1%;
-}
-.performance-container .right  {
     color: #092E69;
     font-size: 18px;
     font-weight: 600;
@@ -101,4 +99,49 @@
     position: absolute;
     top: 5%;
     right: 2%;
+}
+
+@media screen and (max-width: 768px) {
+    .performance-container
+    {
+        display: block;
+    }
+    .performance-container .left {
+        width: 100%;
+        height: 40%;
+    }
+    .performance-container .left .image{
+        width: 30%;
+        height: 45%;
+    }
+    .performance-container .left .name{
+        font-size: 20px;
+        font-weight: 600;
+        margin-top: 2%;
+    }
+    .performance-container .left .position{
+        font-size: 14px;
+        margin-top: 1%;
+    }
+    .performance-container .left .rating{
+        width: 15%;
+        font-size: 14px;
+    }
+
+    .performance-container .right {
+        border: none;
+        width: 100%;
+        height: 60%;
+        padding-left: 5%;
+    }
+    .performance-container .right .paging {
+        top: 75%;
+        right: 50%;
+        transform: translateX(50%);
+    }
+    .performance-container .right .label {
+        bottom: 3%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
